apps/marketing-app/base/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: marketing-app-mtls
  namespace: marketing-dev
spec:
  mtls:
    mode: STRICT
