apps/marketing-app/base/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketing-app
      version: blue
  template:
    metadata:
      labels:
        app: marketing-app
        version: blue
    spec:
      containers:
        - name: marketing-app
          image: europe-west1-docker.pkg.dev/pfe-devsecops-490219/dev-docker-repo/livestream-server:latest
          ports:
            - containerPort: 3000
