apps/marketing-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketing-app
  template:
    metadata:
      labels:
        app: marketing-app
    spec:
      containers:
        - name: marketing-app
          image: europe-west1-docker.pkg.dev/pfe-devsecops-490219/marketing-repo/marketing-app:latest
          ports:
            - containerPort: 8080
