apps/marketing-app/base/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-app-blue
spec:
  selector:
    app: marketing-app
    version: blue
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
