apps/marketing-app/base/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-app-green
spec:
  selector:
    app: marketing-app
    version: green
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
