apps/marketing-app/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-app-preview
  namespace: marketing-dev
spec:
  selector:
    app: marketing-app
  ports:
    - port: 80
      targetPort: 3000
