apps/marketing-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-app
spec:
  selector:
    app: marketing-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
