apps/marketing-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketing-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pfechaima.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketing-app
                port:
                  number: 80
